file, user, auth service

--- a/auth-service/src/main/resources/application.yaml
+++ b/auth-service/src/main/resources/application.yaml
@@ -3,3 +3,5 @@ spring:
     name: auth-service
   config:
     import: "optional:configserver:http://localhost:8088"
+
+application-title: Auth Service
