--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -21,22 +21,22 @@ spring:
         - id: auth-service
           uri: lb://auth-service
           predicates:
-            - Path=/auth/**
+            - Path=/v1/auth/**
         - id: crm-left-service
           uri: lb://crm-left-service
           predicates:
-            - Path=/v1/**
+            - Path=/v1/crm/**
         - id: file-service
           uri: lb://file-service
           predicates:
-            - Path=/file/**
+            - Path=/v1/file-storage/**
         - id: project-service
           uri: lb://project-service
           predicates:
-            - Path=/project/**
+            - Path=/v1/project/**
         - id: messenger-service
           uri: lb://messenger-service
           predicates:
-            - Path=/message/**
+            - Path=/v1/message/**
   config:
     import: "optional:configserver:http://localhost:8088"
