--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8060
+  port: 8081
 
 eureka:
   client:
@@ -15,28 +15,30 @@ management:
 spring:
   application:
    name: api-gateway
-  cloud:
-    gateway:
-      routes:
-        - id: auth-service
-          uri: lb://auth-service
-          predicates:
-            - Path=/v1/auth/**
-        - id: crm-left-service
-          uri: lb://crm-left-service
-          predicates:
-            - Path=/v1/crm/**
-        - id: file-service
-          uri: lb://file-service
-          predicates:
-            - Path=/v1/file-storage/**
-        - id: project-service
-          uri: lb://project-service
-          predicates:
-            - Path=/v1/project/**
-        - id: messenger-service
-          uri: lb://messenger-service
-          predicates:
-            - Path=/v1/message/**
   config:
     import: "optional:configserver:http://localhost:8088"
+
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+      httpclient:
+        connect-timeout: 60000
+        response-timeout: 60s
+
+springdoc:
+  swagger-ui:
+   urls:
+    - name: auth-service
+      url: http://localhost:8084/v1/auth/v3/api-docs
+    - name: crm-left-service
+      url: http://localhost:8085/v1/crm/v3/api-docs
+  api-docs:
+    path: /v3/api-docs
+
+
+application-title: Gateway Service
+application-description: Gateway Left Service API Documentation
+application-version: 1.0.0
+application-license: Apache 2.0
