--- a/crm-left-service/src/main/resources/application.yaml
+++ b/crm-left-service/src/main/resources/application.yaml
@@ -5,5 +5,34 @@ spring:
     import: "optional:configserver:http://localhost:8088"
   datasource:
     url: jdbc:postgresql://localhost:5432/crm_left_service
-    password: 1234
+    password: root123
     username: postgres
+    driver-class-name: org.postgresql.Driver
+
+
+application-title: CRM Service
+application-description: CRM Left Service API Documentation
+application-version: 1.0.0
+application-license: Apache 2.0
+
+server:
+  port: 8085
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
